<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/wardrobe_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wardrobe_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/yellowAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/yellowAccent"
        app:hintTextColor="@color/textGrey"
        android:textColorHint="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wardrobe_title"
        app:startIconDrawable="@drawable/ic_search_black_24dp"
        app:startIconTint="@color/textGrey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_wardrobe_hint"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textColor="@color/textWhite" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/outfits_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/saved_outfits_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar_layout" />

    <TextView
        android:id="@+id/outfits_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/outfits_title"/>

    <!-- Outfits View -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/outfits_recycler"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/outfits_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/clothing_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/clothing_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outfits_recycler" />

    <!-- All Clothing Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clothing_gallery"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/clothing_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
